tests/invalid/Type_Invalid_3.whiley
type contractive is { contractive next }

function f(contractive x) -> contractive:
    return x
